# assignment-1-sscs

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  artifact_2.bundle  cosign-commands.sh  cosign.pub  cyclonedx-sbom.json  main.py  merkle_proof.py  pyproject.toml  sscs_assignment.attestation.bundle  util.py
.github/workflows/: cd.yaml  ci.yaml  scorecard.yml
sscs_assignment/: .pre-commit-config.yaml  CODEOWNERS  artifact.bundle  artifact.md  main.py  merkle_proof.py  requirements.txt  util.py
sscs_assignment/assignment-2/: bandit.final.txt  bandit.initial.txt  flake8.final.txt  flake8.initial.txt  mypy.initial.txt  pylint.final.txt  pylint.initial.txt
sscs_assignment/assignment-3/: part3-writeup.txt
sscs_assignment/assignment-5/: assgn5.txt  part-1.txt  part-2.txt
sscs_assignment/tests/: test_checkpoint.py  test_consistency.py  test_edge_cases.py  test_inclusion.py  test_main_functions.py
tests/: test_checkpoint.py  test_edge_cases.py  test_inclusion.py  test_main_functions.py
