[tool.black]
line-length = 88
target-version = ["py311"]


[project]
name = "sscs-assignment"
version = "0.1.0"
description = "Software Supply Chain Security Assignmen"
authors = [
    {name = "aadi"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astroid (==4.0.1)",
    "bandit (==1.8.6)",
    "black (==25.9.0)",
    "certifi (==2025.10.5)",
    "cffi (==2.0.0)",
    "cfgv (==3.4.0)",
    "charset-normalizer (==3.4.3)",
    "click (==8.3.0)",
    "cryptography (==46.0.2)",
    "dill (==0.4.0)",
    "distlib (==0.4.0)",
    "filelock (==3.20.0)",
    "flake8 (==7.3.0)",
    "gitdb (==4.0.12)",
    "gitdb2 (==4.0.2)",
    "gitpython (==3.0.6)",
    "identify (==2.6.15)",
    "idna (==3.11)",
    "isort (==7.0.0)",
    "logger (==1.4)",
    "markdown-it-py (==4.0.0)",
    "mccabe (==0.7.0)",
    "mdurl (==0.1.2)",
    "mypy (==1.18.2)",
    "mypy-extensions (==1.1.0)",
    "nodeenv (==1.9.1)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.5.0)",
    "pre-commit (==4.4.0)",
    "pycodestyle (==2.14.0)",
    "pycparser (==2.23)",
    "pyflakes (==3.4.0)",
    "pygments (==2.19.2)",
    "pylint (==4.0.0)",
    "pytokens (==0.1.10)",
    "pyyaml (==6.0.3)",
    "requests (==2.32.5)",
    "rich (==14.2.0)",
    "ruamel-yaml (==0.17.40)",
    "smmap (==5.0.2)",
    "stevedore (==5.5.0)",
    "tomlkit (==0.13.3)",
    "trufflehogregexes (==0.0.7)",
    "types-requests (==2.32.4.20250913)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.5.0)",
    "virtualenv (==20.35.4)",
    "yamlfmt (==1.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

